Fix text alignment on buttons

--- a/app/assets/stylesheets/components/btn.scss
+++ b/app/assets/stylesheets/components/btn.scss
@@ -10,7 +10,6 @@
   color: var(--secondary-text-color);
   transition: background-color 200ms;
   background-color: transparent;
-  display: inline-block;
   text-align: center;
 
   &:hover {
